<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="contentDescription,SpUsage">

    <data>

        <variable
            name="book"
            type="kr.taehoon.paging.data.Book" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_book_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_horizontal_margin"
            android:layout_marginTop="@dimen/base_vertical_margin"
            android:layout_marginEnd="@dimen/base_horizontal_margin"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@{book.title}"
            android:textAlignment="textStart"
            android:textColor="@color/baseTextColor"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/iv_book_thumbnail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="알고리즘(3판)(FOUNDATION OF ALGORITHMS USING C++ PSEUDOCODE)(3판)" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_horizontal_margin"
            android:layout_marginTop="@dimen/base_vertical_margin"
            android:layout_marginEnd="@dimen/base_horizontal_margin"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@id/iv_book_thumbnail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_book_title">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author"
                android:textColor="@color/subTextColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_books_authors"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/base_horizontal_margin"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@{book.authorsText}"
                android:textColor="@color/baseTextColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView1"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="김태훈김태훈김태훈김태훈김태훈김태훈김태훈김태훈김태훈김태훈김태훈김태훈김태훈" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_horizontal_margin"
            android:layout_marginTop="@dimen/base_vertical_margin"
            android:layout_marginEnd="@dimen/base_horizontal_margin"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@id/iv_book_thumbnail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraintLayout1">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publication"
                android:textColor="@color/subTextColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tv_books_publisher"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/base_horizontal_margin"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@{book.publisher}"
                android:textColor="@color/baseTextColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="김태훈김태훈김태훈김태훈김태훈김태훈김태훈김태훈김태훈김태훈김태훈김태훈김태훈" />


        </androidx.constraintlayout.widget.ConstraintLayout>
        <!--        <View-->
        <!--            android:id="@+id/view1"-->
        <!--            android:layout_width="1dp"-->
        <!--            android:layout_height="0dp"-->
        <!--            android:background="@color/baseTextColor"-->
        <!--            app:layout_constraintBottom_toBottomOf="@id/tv_books_publisher"-->
        <!--            app:layout_constraintEnd_toStartOf="@id/tv_books_date"-->
        <!--            app:layout_constraintStart_toEndOf="@id/tv_books_publisher"-->
        <!--            app:layout_constraintTop_toTopOf="@id/tv_books_publisher" />-->

        <!--        <TextView-->
        <!--            android:id="@+id/tv_books_date"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginStart="10dp"-->
        <!--            android:ellipsize="end"-->
        <!--            android:textColor="@color/baseTextColor"-->
        <!--            app:date="@{book.datetime}"-->
        <!--            app:dateFormat="@{`yyyy.MM.dd`}"-->
        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toEndOf="@+id/view1"-->
        <!--            app:layout_constraintTop_toTopOf="parent"-->
        <!--            tools:text="2020.06.26" />-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_horizontal_margin"
            android:layout_marginTop="@dimen/base_vertical_margin"
            android:layout_marginEnd="@dimen/base_horizontal_margin"
            android:layout_marginBottom="@dimen/base_vertical_margin"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/iv_book_thumbnail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraintLayout2">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textColor="@color/subTextColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_books_not_sale"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/base_horizontal_margin"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/not_sale"
                android:textColor="@color/baseTextColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="parent"
                app:visible="@{book.salePrice &lt;0}" />

            <TextView
                android:id="@+id/tv_books_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/base_horizontal_margin"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/baseTextColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="parent"
                app:price="@{book.salePrice}"
                app:visible="@{book.salePrice >0}"
                tools:text="10,000" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/iv_book_thumbnail"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/base_vertical_margin"
            android:layout_marginEnd="@dimen/base_horizontal_margin"
            android:layout_marginBottom="@dimen/base_horizontal_margin"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:setImage="@{book.thumbnail}"
            tools:src="@drawable/ic_launcher_background" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>